--- a/style.css
+++ b/style.css
@@ -5,19 +5,19 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 em {font-style: italic;}
 strong {font-weight: bold;}
+p {margin-bottom: 0.5rem;}
 
 #wrapper-list {
 	width: min(100%, 1920px);
+	padding: 0.25rem;
 	margin: 0 auto;
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	gap: 20px;
+	gap: 0.5rem;
 }
-#wrapper-list .list-element {
-	/* width: calc(33.33% - 20px); */
+#wrapper-list .list-element.card {
 	width: max-content;
-	padding: 12px;
 	border: 1px solid darkcyan;
 }
 #wrapper-list .list-element > * + * {
@@ -25,6 +25,9 @@ strong {font-weight: bold;}
 }
 #wrapper-list .list-element ul {
 	padding-left: 10px;
+}
+#wrapper-list .list-element ul li {
+	line-height: 1.2;
 }
 #wrapper-list .list-element ul li + li {
 	margin-top: 4px;
